# Satellites

./: CMakeLists.txt
src/: main.cpp  satellite.cpp  satellite.h
